--- a/README.org
+++ b/README.org
@@ -22,7 +22,7 @@
   |------+---------------------------------------------------------------------|
   |    1 | [[https://youtu.be/7awN_Fga4PQ][CF quadcopter First test]]                                            |
   |    2 | [[https://youtu.be/i5cuPygJWJk][Control CF2 using PS4 controller]]                                    |
-  |    3 | [[https://www.youtube.com/watch?v=kcwpM1wRnxU&feature=youtu.be][3D simulation [part 1] --- quadcopter with spinning mas]]                      |
+  |    3 | [[https://www.youtube.com/watch?v=kcwpM1wRnxU&feature=youtu.be][3D simulation (part 1) --- quadcopter with spinning mas]]                      |
   |    4 | [[https://youtu.be/V58xpIB7BX8][Quadcopter motor test]]                                               |
   |    5 | 3D simulation [[https://www.youtube.com/watch?v=o9f2x5YUPoA&t=1s][part 2]] & [[https://www.youtube.com/watch?v=nTm2-kypBXU&feature=youtu.be][controller motor test with H-bridge]] |
   |    6 | [[https://youtu.be/SJowaesDsbo][3D printed arm test]]                                                 |
