--- a/README.org
+++ b/README.org
@@ -7,7 +7,7 @@
 
    For a brief summary of our project, check out the following:
    - [[https://github.com/Amir-Omidfar/183DB-/blob/master/FInal%2520Report.pdf][Final Presentation]]
-   - [[wait to be upload][Final Documentation]]
+   - [[https://github.com/Amir-Omidfar/183DB-/blob/master/Documentation/main.pdf][Final Documentation]]
 * Mathematical Model  
   Using Newton's fundamental law of physics, we are able to derive systems of equations that characterize the dynamics of our system. However, due to the complexity introduced by rotational acceleration, even in quaternion, no close-solution in the form of $\dot{s} = f(s)$ is analytically derived. Moreover, solving the equations in the form $f(\dot{s},s)$ numerically in Matlab yields no solutions.
   - Entire Derivation is in the Documentation
